--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<p>This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too.</p>
 
 	<img src="https://www.allrecipes.com/thmb/r7dFgPA2HN6rpvub5d9Py9p1-n8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/275553-Breaded-Air-Fryer-Pork-Chops-1fe47823a1bc40e88c877fe5f0a3ac53.jpg">
-	<span class="caption"><a href="https://cmd-max.github.io/recipes/lasangna.html">click me for the recipes</a></span>
+	<span class="caption"><a href="https://recipes-phi-six.vercel.app/lasagna.html/">click me for the recipes</a></span>
 	<h2>Air fryer beyond meat brats,onions and peppers</h2>
 	<p>The traditional German sausage, typically made from pork, gets a Meatless Monday makeover. When shopping, look for brands like Impossible and Beyond Sausage—and for an even quicker meal, snag the pre-cut onions and peppers in the produce section. Serve over rice with grainy mustard on the side, or add some hoagies and beers for a satisfying ballpark-inspired meal.</p>
 	
