--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 	
 	
 	<img src="https://www.allrecipes.com/thmb/HcCSX0YV3U6wO4MB_SPzpMCNT0w=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7486498-464281c8d32b49dba91035873bcc1838.jpg">
-	<span class="caption"><a href="C:\Users\Asus\repos\odin-recipes\index.html\air fryer.html">click me for the recipe</a></span>
+	<span class="caption"><a href="https://recipes-phi-six.vercel.app/air fryer.html">click me for the recipe</a></span>
 	<h2>Panko-crusted Air fryer Mahi Mahi</h2>
 	<p>This delicious air fryer mahi mahi with panko breading has a satisfying crunch while the fish fillets turn out perfectly flaky. Serve with a side of rice or use the fillets for fish tacos.</p>
 	<img src=https://www.allrecipes.com/thmb/3d_TgjmggL-66nMi-biiDI0tmFc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Panko-Crusted-Air-Fryer-Mahi-Mahi-2000-03487cee3c0b46ab91954bdc111f024a.jpg>
-	<span class="caption"><a href="C:\Users\Asus\repos\odin-recipes\index.html\Panko-Crusted Air Fryer Mahi Mahi.html">click me for the recipe</a></span>
+	<span class="caption"><a href="https://recipes-phi-six.vercel.app/Panko-Crusted Air Fryer Mahi Mahi.html">click me for the recipe</a></span>
 	
 	
 </body>
